# text-heatmap

./: .env.example  .gitignore  CLAUDE.md
.github/workflows/: docker-build.yml
backend/: Dockerfile  config.py  main.py  pyproject.toml  requirements.txt
backend/routers/: analyze.py  translate.py
backend/services/: attention.py  cache.py  extraction.py  file_parser.py  model_loader.py
docs/plans/: 2026-01-22-haiku-extraction-design.md  2026-01-22-text-heatmap-design.md
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  playwright.config.ts
frontend/e2e/: screenshot.spec.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: FileUpload.tsx  HeatmapView.tsx  LoadingState.tsx  SettingsPanel.tsx  TextInput.tsx
frontend/src/lib/: api.ts
frontend/src/stores/: settingsStore.ts
