[project]
name = "text-heatmap-backend"
version = "0.2.0"
description = "Haiku API 기반 텍스트 중요도 분석 API"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
    "PyPDF2>=3.0.1",
    "pdfplumber>=0.10.3",
    "python-docx>=1.1.0",
    "redis>=5.0.0",
]

[tool.uv]
dev-dependencies = []
